--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy: 
+      matrix:
+        rust:
+          - stable
+          - beta
+          - nightly
+    
     steps:
     - uses: actions/checkout@v3
     - name: Build
