--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.2", default-features = false, features = ["std", "color", "help", "usage", "derive", "cargo"] }
-reqwest = { version = "0.11", default-features = false }
+dirs = { version = "5.0", default-features = false }
+reqwest = { version = "0.11", default-features = false, features = ["default-tls", "blocking"] }
 
 [profile.dev]
 opt-level = 1
