--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.2", default-features = false, features = ["std", "color", "help", "usage", "derive", "cargo"] }
 dirs = { version = "5.0", default-features = false }
+fs_extra = { version = "1.3.0", default-features = false }
 reqwest = { version = "0.11", default-features = false, features = ["default-tls", "blocking"] }
 
 [profile.dev]
